--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -73,15 +73,15 @@
     <ul>
       <li>
         <p><i class="fa fa-map-o fa-2x"></i></p>
-        <p>LaiOffer office, CA</p>
+        <p>San Jose, CA</p>
       </li>
       <li>
         <p><i class="fa fa-envelope-o fa-2x"></i></p>
-        <p>info@laioffer.com</p>
+        <p>wenshao0229@gmail.com</p>
       </li>
       <li>
         <p><i class="fa fa-phone fa-2x"></i></p>
-        <p>+1 800 123 456</p>
+        <p>+1 682 558 4872</p>
       </li>
     </ul>
   </footer>
